--- a/assets/less/updates-style.less
+++ b/assets/less/updates-style.less
@@ -22,7 +22,7 @@
 
 // Ensure the footer is contained at the bottom and by default the page extends to at least a full page.
 html, body {
-  height: 100%;
+  min-height: 100%;
 }
 body {
   display: flex;
